--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -10,7 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"MemoryFlashCore": "file:../../packages/MemoryFlashCore",
+		"MemoryFlashCore": "*",
 		"@headlessui/react": "2.1.3",
 		"@heroicons/react": "^2.1.3",
 		"@tailwindcss/forms": "0.5.8",
