--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -27,7 +27,6 @@ jobs:
             - name: Build and Deploy
               run: |
                   yarn install
-                  cd apps/server
                   touch app.yaml
                   echo 'runtime: nodejs20' >> app.yaml
                   echo 'env: standard' >> app.yaml
@@ -42,12 +41,13 @@ jobs:
                   echo '  FRONT_END_URL: https://mflash.riker.tech'  >> app.yaml
                   echo 'automatic_scaling:' >> app.yaml
                   echo '  max_instances: 1' >> app.yaml
+                  echo '' >> app.yaml
+                  echo 'entrypoint: bash -c "cd apps/server && yarn start:prod"' >> app.yaml
 
                   # Build and deploy within the apps/server directory
-                  yarn run build
+                  yarn run build # this might not be necssary
                   echo "$(pwd)"
                   echo "$(ls -la)"
                   echo "$(ls -la ..)"
-                  cd ../../
                   gcloud app deploy --project "memory-flash-436000" apps/server/app.yaml
                   curl https://mflash-api.riker.tech
