--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -45,7 +45,7 @@ jobs:
                   echo 'entrypoint: bash -c "cd apps/server && yarn start:prod"' >> app.yaml
 
                   # Build and deploy within the apps/server directory
-                  yarn run build # this might not be necssary
+                  # yarn run build # this might not be necssary
                   echo "$(pwd)"
                   echo "$(ls -la)"
                   echo "$(ls -la ..)"
