--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -3,16 +3,18 @@
 		"baseUrl": ".",
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
+		"lib": ["es6"],
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"noImplicitAny": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
 		"outDir": "./dist",
 		"paths": {
 			"*": ["node_modules/*"]
 		},
 		"rootDir": "./src",
 		"skipLibCheck": true,
-		"lib": ["es6"],
 		"sourceMap": true,
 		"strict": true,
 		"target": "es6",
