--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -44,6 +44,11 @@ jobs:
                   echo '' >> app.yaml
                   echo 'entrypoint: bash -c "cd apps/server && yarn start:prod"' >> app.yaml
 
-                  # Build and deploy within the apps/server directory
+                  # Build server
+                  cd apps/server
+                  yarn build
+                  cd ../..
+
+                  # Deploy within the apps/server directory
                   gcloud app deploy --project "memory-flash-436000" app.yaml
                   curl https://mflash-api.riker.tech
