--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,12 +8,12 @@
 		"dev": "nodemon src/app.ts",
 		"format": "prettier --write \"src/**/*.{ts,json}\"",
 		"lint": "eslint src/**/*.ts",
-		"start:prod": "node dist/app.js",
+		"start:prod": "ts-node --transpile-only src/app.ts",
 		"test": "NODE_ENV=test mocha --require ts-node/register --require dotenv/config src/**/*.test.ts",
 		"test:watch": "nodemon --ext ts --exec 'yarn test'"
 	},
 	"dependencies": {
-		"MemoryFlashCore": "*",
+		"MemoryFlashCore": "workspace:*",
 		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
 		"bson-objectid": "^2.0.4",
