--- a/packages/MemoryFlashCore/package.json
+++ b/packages/MemoryFlashCore/package.json
@@ -3,6 +3,9 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"license": "MIT",
+	"scripts": {
+		"build": "tsc"
+	},
 	"devDependencies": {
 		"concurrently": "^9.0.1",
 		"typescript": "^5.5.4"
