--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -4,16 +4,16 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite --port 5173",
+		"dev": "vite --host --port 5173",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"MemoryFlashCore": "*",
 		"@headlessui/react": "2.1.3",
 		"@heroicons/react": "^2.1.3",
 		"@tailwindcss/forms": "0.5.8",
+		"MemoryFlashCore": "*",
 		"autoprefixer": "^10.4.16",
 		"clsx": "^2.1.1",
 		"lodash": "^4.17.21",
