--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -7,7 +7,9 @@
 		"dev": "vite --host --port 5173",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "vitest",
+		"test:run": "vitest run"
 	},
 	"dependencies": {
 		"@headlessui/react": "2.2.2",
@@ -30,6 +32,8 @@
 		"webmidi": "^3.1.8"
 	},
 	"devDependencies": {
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/react": "^16.3.0",
 		"@types/lodash": "^4.17.0",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
@@ -39,7 +43,9 @@
 		"eslint": "^8.45.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
+		"jsdom": "^26.1.0",
 		"typescript": "^5.0.2",
-		"vite": "5.1.1"
+		"vite": "5.1.1",
+		"vitest": "^3.1.2"
 	}
 }
