--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -34,15 +34,19 @@
 	"devDependencies": {
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.3.0",
+		"@types/jest-image-snapshot": "^6.4.0",
 		"@types/lodash": "^4.17.0",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"@vitejs/plugin-react": "^4.0.3",
+		"@vitest/ui": "^3.1.3",
+		"canvas": "^3.1.0",
 		"eslint": "^8.45.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
+		"jest-image-snapshot": "^6.4.0",
 		"jsdom": "^26.1.0",
 		"typescript": "^5.0.2",
 		"vite": "5.1.1",
