--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -6,8 +6,10 @@
 	"scripts": {
 		"dev": "vite --host --port 5173",
 		"build": "tsc && vite build",
-		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+                "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+                "preview": "vite preview",
+                "test:screenshots": "playwright test",
+                "test:screenshots:update": "playwright test --update-snapshots"
 	},
 	"dependencies": {
 		"@headlessui/react": "2.1.3",
@@ -39,7 +41,8 @@
 		"eslint": "^8.45.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
-		"typescript": "^5.0.2",
-		"vite": "5.1.1"
-	}
+                "typescript": "^5.0.2",
+                "vite": "5.1.1",
+                "@playwright/test": "^1.42.1"
+        }
 }
