--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"main": "index.js",
 	"private": true,
 	"scripts": {
-		"dev": "concurrently \"yarn workspace MemoryFlashServer dev\" \"yarn workspace MemoryFlashReact dev\""
-	},
+                "dev": "concurrently \"yarn workspace MemoryFlashServer dev\" \"yarn workspace MemoryFlashReact dev\"",
+                "test": "echo 'no tests'"
+        },
 	"workspaces": [
 		"apps/*",
 		"packages/*"
