Run screenshot tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,3 +39,12 @@ jobs:
               run: yarn test
               env:
                   APP_URL: http://0.0.0.0:8008
+
+            - name: Install Playwright browsers
+              working-directory: apps/react
+              run: npx playwright install --with-deps
+
+            - name: Run screenshot tests
+              run: yarn workspace MemoryFlashReact test:screenshots
+              env:
+                  APP_URL: http://0.0.0.0:8008
