--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -26,5 +26,6 @@ jobs:
             git config user.name 'github-actions[bot]'
             git config user.email 'github-actions[bot]@users.noreply.github.com'
             git commit -am "style: format code"
-            git push
+            BRANCH="${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}"
+            git push origin HEAD:"$BRANCH"
           fi
