--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-        "name": "MemoryFlash",
-        "version": "1.0.0",
-        "main": "index.js",
-        "private": true,
-        "scripts": {
+	"name": "MemoryFlash",
+	"version": "1.0.0",
+	"main": "index.js",
+	"private": true,
+	"scripts": {
                 "dev": "concurrently \"yarn workspace MemoryFlashServer dev\" \"yarn workspace MemoryFlashReact dev\"",
-                "test": "echo 'no tests'",
-                "format": "prettier --write .",
-                "format:check": "prettier --check ."
+                "test": "echo 'no tests'"
         },
-        "workspaces": [
-                "apps/*",
-                "packages/*"
-        ],
-        "devDependencies": {
-                "prettier": "^3.3.3"
-        }
+	"workspaces": [
+		"apps/*",
+		"packages/*"
+	]
 }
