--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,28 +1,30 @@
 name: Prettier Auto Format
 
 on:
-  pull_request:
-  push:
+    pull_request:
+    push:
 
 jobs:
-  prettier:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-      - name: Format
-        run: npx prettier@3 --write .
-      - name: Commit changes
-        run: |
-          if [[ -n $(git status --porcelain) ]]; then
-            git config user.name 'github-actions[bot]'
-            git config user.email 'github-actions[bot]@users.noreply.github.com'
-            git commit -am "style: format code"
-            BRANCH="${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}"
-            git push origin HEAD:"$BRANCH"
-          fi
+    prettier:
+        runs-on: ubuntu-latest
+        permissions:
+            contents: write
+        steps:
+            - uses: actions/checkout@v3
+              with:
+                  fetch-depth: 0
+            - name: Set up Node.js
+              uses: actions/setup-node@v3
+              with:
+                  node-version: 20
+            - name: Format
+              run: npx prettier@3 --write .
+            - name: Commit changes
+              run: |
+                  if [[ -n $(git status --porcelain) ]]; then
+                    git config user.name 'github-actions[bot]'
+                    git config user.email 'github-actions[bot]@users.noreply.github.com'
+                    git commit -am "style: format code"
+                    BRANCH="${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}"
+                    git push origin HEAD:"$BRANCH"
+                  fi
