--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ dist
 .swp
 
 yarn-error.log
+.yarn/install-state.gz
+.yarn/build-state.yml
+
 
 apps/MemoryFlashServer/.gitignore.swp
 apps/ios/MemoryFlashiOS.xcodeproj/xcuserdata/sam.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
