--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "MemoryFlashReact",
 	"private": true,
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite --host --port 5173",
@@ -32,6 +32,7 @@
 		"webmidi": "^3.1.8"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.42.1",
 		"@types/lodash": "^4.17.0",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
@@ -42,7 +43,6 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"typescript": "^5.0.2",
-		"vite": "5.1.1",
-		"@playwright/test": "^1.42.1"
+		"vite": "5.1.1"
 	}
 }
