Fix Yarn version error in GitHub Actions (#13)
* fix: enable corepack for workflows

* Move corepack setup before Node

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,14 +15,14 @@ jobs:
             - name: Check out code
               uses: actions/checkout@v3
 
+            - name: Enable Corepack
+              run: corepack enable
+
             - name: Set up Node.js
               uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'yarn'
-
-            - name: Install Yarn
-              run: npm install -g yarn
 
             - name: Install dependencies
               run: yarn install
