--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -15,6 +15,8 @@ jobs:
               with:
                   submodules: 'true'
                   token: ${{ secrets.WORKFLOW_SUBMODULE_ACCESS_TOKEN }}
+            - name: Enable Corepack
+              run: corepack enable
             - name: install node
               uses: actions/setup-node@v3
               with:
