--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,7 +9,7 @@
 		"format": "prettier --write \"src/**/*.{ts,json}\"",
 		"lint": "eslint src/**/*.ts",
 		"start:prod": "ts-node --transpile-only src/app.ts",
-		"test": "NODE_ENV=test mocha --require ts-node/register --require dotenv/config src/**/*.test.ts",
+		"test": "NODE_ENV=test mocha --timeout 10000 --require ts-node/register --require dotenv/config src/**/*.test.ts",
 		"test:watch": "nodemon --ext ts --exec 'yarn test'"
 	},
 	"dependencies": {
