--- a/apps/ios/MemoryFlashiOS/Info.plist
+++ b/apps/ios/MemoryFlashiOS/Info.plist
@@ -23,5 +23,9 @@
         </dict>
         <key>NSBluetoothAlwaysUsageDescription</key>
         <string>This app requires access to Bluetooth to connect to MIDI devices.</string>
+        <key>CFBundleShortVersionString</key>
+        <string>1.0</string>
+        <key>CFBundleVersion</key>
+        <string>1</string>
     </dict>
 </plist>
