--- a/apps/react/tsconfig.json
+++ b/apps/react/tsconfig.json
@@ -21,10 +21,6 @@
 		"noUnusedParameters": false,
 		"noFallthroughCasesInSwitch": true
 	},
-	"include": [
-		"src",
-		"tests/music-notation-eighth-test.tsx",
-		"tests/music-notation-half-quarter-test.tsx"
-	],
+	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
