Add script for screenshot diff comments

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,3 +43,9 @@ jobs:
               run: yarn test
               env:
                   APP_URL: http://0.0.0.0:8008
+
+            - name: Comment screenshot diffs
+              if: failure() && github.event.pull_request
+              run: bash scripts/comment-screenshot-diffs.sh
+              env:
+                  GITHUB_TOKEN: ${{ github.token }}
