chore: name CI jobs

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
     prettier:
+        name: Prettier
         runs-on: ubuntu-latest
         permissions:
             contents: write
