--- a/.github/workflows/update-snapshots.yml
+++ b/.github/workflows/update-snapshots.yml
@@ -35,6 +35,6 @@ jobs:
               run: |
                   git config user.name "github-actions[bot]"
                   git config user.email "github-actions[bot]@users.noreply.github.com"
-                  git add apps/react/__image_snapshots__/**/* || true
+                  git add apps/react/tests/*-snapshots/* || true
                   git commit -m "chore: update Playwright screenshot snapshots" || echo "No changes to commit"
                   git push origin HEAD:main
