--- a/.github/workflows/update-snapshots.yml
+++ b/.github/workflows/update-snapshots.yml
@@ -15,6 +15,13 @@ jobs:
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
 
+            - name: Debug current Git branch
+              run: |
+                  echo "Current branch: $(git rev-parse --abbrev-ref HEAD)"
+                  echo "GITHUB_REF=${GITHUB_REF}"
+                  echo "GITHUB_HEAD_REF=${GITHUB_HEAD_REF}"
+                  echo "GITHUB_BASE_REF=${GITHUB_BASE_REF}"
+
             - name: Enable Corepack
               run: corepack enable
 
