--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,12 @@
 name: Unit Tests
 
-on: [pull_request]
+on:
+    pull_request:
+    workflow_run:
+        workflows:
+            - Update Screenshot Test PNGs
+        types:
+            - completed
 
 jobs:
     test:
