--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,6 @@
 name: Unit Tests
 
-on:
-    pull_request:
-    workflow_run:
-        workflows:
-            - Update Screenshot Test PNGs
-        types:
-            - completed
+on: [pull_request]
 
 jobs:
     test:
