fix server ts paths and start

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -11,7 +11,8 @@
 		"noUnusedParameters": false,
 		"outDir": "./dist",
 		"paths": {
-			"*": ["node_modules/*"]
+			"*": ["node_modules/*"],
+			"MemoryFlashCore/*": ["../../packages/MemoryFlashCore/dist/*"]
 		},
 		"rootDir": "./src",
 		"skipLibCheck": true,
