--- a/packages/MemoryFlashCore/tsconfig.json
+++ b/packages/MemoryFlashCore/tsconfig.json
@@ -9,7 +9,9 @@
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"module": "commonjs",
 		"moduleResolution": "node",
-		"noEmit": true,
+		"outDir": "dist",
+		"declaration": true,
+		"declarationDir": "dist",
 		"noUnusedLocals": false,
 		"noUnusedParameters": false,
 		"resolveJsonModule": true,
