--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -8,8 +8,8 @@
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"test:screenshots": "BLOCK_FONTS=true playwright test",
-		"test:screenshots:update": "BLOCK_FONTS=true playwright test --update-snapshots",
+		"test:screenshots": "BLOCK_REMOTE_FONTS=true playwright test",
+		"test:screenshots:update": "BLOCK_REMOTE_FONTS=true playwright test --update-snapshots",
 		"postinstall": "./scripts/install-playwright.sh"
 	},
 	"dependencies": {
