--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -28,6 +28,7 @@
 		"passport-local": "^1.0.0",
 		"tonal": "^6.2.0",
 		"ts-node": "^10.9.1",
+		"typescript": "^5.2.2",
 		"winston": "^3.11.0"
 	},
 	"devDependencies": {
@@ -51,8 +52,7 @@
 		"mocha": "^10.2.0",
 		"mongodb-memory-server": "^10.0.0",
 		"nodemon": "^3.0.1",
-		"prettier": "^3.0.3",
-		"typescript": "^5.2.2"
+		"prettier": "^3.0.3"
 	},
 	"husky": {
 		"hooks": {
