--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,7 @@
 		"dev": "nodemon src/app.ts",
 		"format": "prettier --write \"src/**/*.{ts,json}\"",
 		"lint": "eslint src/**/*.ts",
-		"start:prod": "node dist/app.js",
+		"start:prod": "ts-node --transpile-only src/app.ts",
 		"test": "NODE_ENV=test mocha --timeout 10000 --require ts-node/register --require dotenv/config src/**/*.test.ts",
 		"test:watch": "nodemon --ext ts --exec 'yarn test'"
 	},
@@ -27,6 +27,8 @@
 		"passport": "^0.7.0",
 		"passport-local": "^1.0.0",
 		"tonal": "^6.2.0",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.2.2",
 		"winston": "^3.11.0"
 	},
 	"devDependencies": {
@@ -50,9 +52,7 @@
 		"mocha": "^10.2.0",
 		"mongodb-memory-server": "^10.0.0",
 		"nodemon": "^3.0.1",
-		"prettier": "^3.0.3",
-		"ts-node": "^10.9.1",
-		"typescript": "^5.2.2"
+		"prettier": "^3.0.3"
 	},
 	"husky": {
 		"hooks": {
