--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ apps/MemoryFlashServer/.gitignore.swp
 apps/ios/MemoryFlashiOS.xcodeproj/xcuserdata/sam.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 apps/ios/MemoryFlashiOS.xcodeproj/project.xcworkspace/xcuserdata/sam.xcuserdatad/UserInterfaceState.xcuserstate
 *.tsbuildinfo
+test-fixtures/session-cookies.json
