--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -10,7 +10,7 @@
 		"preview": "vite preview",
 		"test:screenshots": "BLOCK_REMOTE_FONTS=true playwright test",
 		"test:screenshots:update": "BLOCK_REMOTE_FONTS=true playwright test --update-snapshots",
-		"postinstall": "./scripts/install-playwright.sh"
+		"postinstall": "./scripts/install-playwright.sh && bash ./scripts/install-inter-fonts.sh"
 	},
 	"dependencies": {
 		"@headlessui/react": "2.1.3",
