--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -23,6 +23,7 @@
 		"postcss": "^8.4.31",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-markdown": "^9.0.1",
 		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.17.0",
 		"recharts": "^2.12.7",
