--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -17,6 +17,7 @@
 		"@headlessui/react": "2.1.3",
 		"@heroicons/react": "^2.1.3",
 		"@tailwindcss/forms": "0.5.8",
+		"@tailwindcss/typography": "^0.5.16",
 		"MemoryFlashCore": "*",
 		"autoprefixer": "^10.4.16",
 		"clsx": "^2.1.1",
