--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,6 +53,10 @@ jobs:
                   APP_URL: http://0.0.0.0:8008
                   BLOCK_REMOTE_FONTS: true
 
+            - name: Ensure no unused Playwright snapshots
+              if: steps.tests.outcome == 'success'
+              run: node scripts/prune-snapshots.js
+
             - name: Authenticate on GCS
               if: steps.tests.outcome == 'failure'
               uses: google-github-actions/auth@v2
