--- a/.github/workflows/update-snapshots.yml
+++ b/.github/workflows/update-snapshots.yml
@@ -28,6 +28,9 @@ jobs:
             - name: Install dependencies
               run: yarn install
 
+            - name: Prune existing Playwright snapshots
+              run: rm -rf apps/react/tests/*-snapshots
+
             - name: Update Playwright snapshots
               working-directory: apps/react
               run: yarn test:screenshots:update
@@ -39,7 +42,7 @@ jobs:
               run: |
                   git config user.name "github-actions[bot]"
                   git config user.email "github-actions[bot]@users.noreply.github.com"
-                  git add apps/react/tests/*-snapshots/* || true
+                  git add -A apps/react/tests || true
                   git commit -m "chore: update Playwright screenshot snapshots" || echo "No changes to commit"
                   BRANCH="${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}"
                   echo "Pushing updates to branch: $BRANCH"
