--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"MemoryFlashServer": "workspace:apps/server"
 	},
 	"devDependencies": {
+		"@playwright/mcp": "^0.0.48",
 		"concurrently": "^9.1.2"
 	}
 }
