--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ yarn-error.log
 .yarn/install-state.gz
 .yarn/build-state.yml
 
+# Playwright MCP auth state
+.auth-state.json
 
 apps/MemoryFlashServer/.gitignore.swp
 apps/ios/MemoryFlashiOS.xcodeproj/xcuserdata/sam.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
